// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalizedText schema (0) match fails for invalid config -> empty: empty 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'Locale'
    Path:     LocalizedText.schema.json#/required
  must have required property 'Text'
    Path:     LocalizedText.schema.json#/required
"
`;

exports[`LocalizedText schema (1) match fails for invalid config -> Invalid Locale: Invalid Locale 1`] = `
"expect(received).toMatchSchema(schema)

received
  /Locale must match pattern \\"^[A-z]{2}(-[A-z]{2,3})?$\\"
    Received: <string> ene
    Path:     LocalizedText.schema.jsonconstants/locale.pattern.schema.json/pattern
"
`;

exports[`LocalizedText schema (2) match fails for invalid config -> Invalid Locale: Invalid Locale 1`] = `
"expect(received).toMatchSchema(schema)

received
  /Locale must match pattern \\"^[A-z]{2}(-[A-z]{2,3})?$\\"
    Received: <string> en-USofA
    Path:     LocalizedText.schema.jsonconstants/locale.pattern.schema.json/pattern
"
`;

exports[`LocalizedText schema (3) match fails for invalid config -> Invalid Text: Invalid Text 1`] = `
"expect(received).toMatchSchema(schema)

received
  /Text must NOT have fewer than 1 characters
    Received: <empty string>
    Path:     LocalizedText.schema.json#/properties/Text/minLength
"
`;

exports[`LocalizedText schema (4) match fails for invalid config -> missing Locale: missing Locale 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'Locale'
    Path:     LocalizedText.schema.json#/required
"
`;

exports[`LocalizedText schema (5) match fails for invalid config -> empty Locale & Text: empty Locale & Text 1`] = `
"expect(received).toMatchSchema(schema)

received
  /Locale must match pattern \\"^[A-z]{2}(-[A-z]{2,3})?$\\"
    Received: <empty string>
    Path:     LocalizedText.schema.jsonconstants/locale.pattern.schema.json/pattern
  /Text must NOT have fewer than 1 characters
    Received: <empty string>
    Path:     LocalizedText.schema.json#/properties/Text/minLength
"
`;

exports[`LocalizedText schema (6) match fails for invalid config -> missing Text: missing Text 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'Text'
    Path:     LocalizedText.schema.json#/required
"
`;
